--- a/blog-article-11.html
+++ b/blog-article-11.html
@@ -8,12 +8,15 @@
       href="bek-ruby-logo/bek-ruby-title-logo-2.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>吸引力法則（嚕比）- Blog</title>
+    <title>馬背上的秋色探險——騎行吉爾吉斯高山森林</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="about-us.css" />
     <link rel="stylesheet" href="visa.css" />
     <link rel="stylesheet" href="blog-article.css" />
     <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="blog-article-3.css" />
+    <link rel="stylesheet" href="overnights-blog.css" />
+    <link rel="stylesheet" href="css/blog-article-11.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
       rel="stylesheet"
@@ -55,47 +58,112 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>吸引力法則（嚕比）</h1>
     </section>
 
     <!---------- blog ----------->
-
-    <section class="blog-article">
-      <div class="blog-row">
-        <div class="blog-col-info">
-          <div class="mur-mur-blog-info">
-            <div>
-              <h2></h2>
-              <p>
-                25歲的我創立了個人品牌Little OH! 手工飾品，
-                這個人生最大轉捩點之一， 讓當時在辦公室上班快得憂鬱症的我，
-                體會到自由， 創造和自我實現在我年輕的生命中展開。
-                接下來的十年我飛到海外推廣品牌，
-                也有更多時間到世界各地當背包客，
-                自助旅行了三十多個國家，吉爾吉斯是最獨特之一，揭開中亞神秘的面紗，
-              </p>
-              <p>
-                沒有污染的絲路風景，幽默好客的民族性都讓我記憶深刻。
-                還記得瑞士好友Angie問我，你們在吉爾吉斯大山裡辦的傳統婚禮，
-                真的是太酷了！ 騎馬進場， 自己蓋蒙古包， 穿上傳統服飾，
-                你曾想過人生會有這樣的經歷嗎？ 泡在溫泉裡的我想了一下回答，
-                其實好像沒有很意外呢, 關於山的書我可能有三五十本,
-                一直都很熱愛少數民族文化，台灣原住民, 西藏, 泰北,
-                雲南等，沒想過要披西方的白色婚紗，反而看到傳統服飾和婚禮讓我非常興奮。
-              </p>
-
-              <p>
-                是吸引力法則將我一路帶到了吉爾吉斯，這個被天山包圍的國度，心中充滿感謝！
-                讓我的生命又翻到下一個章節，和貝殼一同期待，
-                努力琢磨未來日子的樣貌。 人生就是這樣充滿驚奇,
-                我接受所有的挫折和挑戰, 爬山想放棄的時候, 我告訴自己：
-                痛苦會過去，美會留下！再堅持一下下就好囉！
-              </p>
+    <div class="overnight-hotels">
+      <button class="prev-button">❮</button>
+      <div class="slider-wrapper">
+        <div class="overnight-slider">
+          <div class="slide slide-1">
+            <div class="slide-img slide-img-2">
+              <img src="blog/Outhmn.jpg" alt="Overnight Kemin" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+      <button class="next-button">❯</button>
+    </div>
+
+    <div class="blog-container">
+      <h2>吉爾吉斯秋日騎行</h2>
+      <p>此篇文章刊登於旅遊雜誌創刊號《La Listo》</p>
+
+      <p>
+        翻過新疆天山和帕米爾高原，那頭是鮮少台灣人聽過的中亞國家——吉爾吉斯。90%國土被高山覆蓋，最高海拔達七千米。從首都比什凱克（Bishkek）遠眺，一整排巍峨雪山矗立眼前。往南通往第二大城奧什（Osh）的山路蜿蜒曲折，彷彿壯闊版的九彎十八拐，沿途景色有如南美安第斯山脈般壯麗，還能見到冰川奇景。難怪吉爾吉斯被譽為“中亞小瑞士”。
+      </p>
+
+      <p>
+        四季分明的溫帶大陸性氣候讓這裡的秋天特別浪漫，整座山頭染上金黃與橘紅，針葉林、白樺木和雲杉林錯落交織，遠遠望去像幅漸層的油畫。而我選擇用最道地的方式——騎馬，來沉浸在這片秋色中。
+      </p>
+
+      <h3>馬背上的秋天</h3>
+      <p>
+        跟著我的吉爾吉斯先生Bek，我們參加了當地旅行社安排的森林騎馬一日遊。由於中亞五國曾是蘇聯國家，這裡的官方語言是吉語和俄語，英文不太通。幸好導遊是個活潑的大學生，旅客大多是俄羅斯人，車上大家玩遊戲熱鬧無比，而我則深刻感受到語言不通的無力感。
+      </p>
+
+      <p>
+        歷經兩個多小時的車程，終於抵達山中人家。二十多匹健壯的馬兒早已整齊排列，等待我們的到來。簡單聽完騎馬指南，我一個跨坐上馬，腳踩穩馬蹬，背打直，雙手握緊韁繩，出發！
+      </p>
+
+      <h3>穿越金黃森林</h3>
+      <p>
+        我們浩浩蕩蕩地朝著雪山方向前進，山丘綿延不斷，視野遼闊，夏天的綠意已被秋黃取代。行進一小時後，山徑開始結霜，我深吸一口新鮮的冷空氣，整個人都清醒了。
+      </p>
+
+      <p>
+        馬蹄聲踏入金黃的森林，陽光透過針葉林間隙灑落，彷彿走進印象派畫作裡。當地嚮導沿途協助我們掌握方向，還會在馬背上互相較勁摔角，看得我們驚心動魄，對他們來說卻是日常。
+      </p>
+
+      <h3>在雪地裡享受野餐</h3>
+      <p>
+        我們自備食物，經典的中亞饢餅搭配當地新鮮核桃，秋天正值核桃與蘋果豐收季節，這裡的蘋果雖然外表不起眼，卻酸甜多汁。坐在雪地裡，望著無邊無際的秋色美景，內心感受到前所未有的寧靜與滿足。
+      </p>
+
+      <h3>下山的路程</h3>
+      <p>
+        下山的路程充滿顛簸，所幸剛才只是簡單果腹，否則騎馬超過五小時，屁股內側真的會磨破皮！這趟旅程讓我見識到騎馬的體力消耗之大，全身肌肉都感受到燃燒，回家後背部酸痛到不行，泡個熱水澡才稍微緩解。
+      </p>
+
+      <h3>馬背上的挑戰</h3>
+      <p>
+        這已經是我第五次騎馬，膽量和經驗比起初學者大有提升。我輕輕夾緊馬腹，嘴裡發出“chu
+        chu”的聲音，嘗試讓馬加快速度。身體自然隨著馬的步伐擺動，聽著馬蹄聲噠噠作響，真的好威風！
+      </p>
+
+      <p>
+        快馬加鞭時的感覺有如電影裡的風馳電掣，但這需要足夠的練習，初學者可別輕易嘗試。
+      </p>
+
+      <h3>吉爾吉斯的最佳旅遊季節</h3>
+      <p>
+        五到十月是造訪吉爾吉斯的最佳時機，無論是健行、騎馬都能帶來難忘的體驗。
+      </p>
+      <ul>
+        <li>
+          <strong>五月春天：</strong>大地恢復生機，翠綠山頭綿延，野花盛開。
+        </li>
+        <li>
+          <strong>七月夏天：</strong
+          >氣候宜人，還能遇見牧民的蒙古包與成群牛馬羊。
+        </li>
+        <li><strong>十月秋天：</strong>金黃遍野，宛如一幅秋日童話畫作。</li>
+      </ul>
+
+      <p>
+        到了深秋，家家戶戶開始準備醃菜和沙拉為冬天儲糧，而我則已經開始期待下一次的騎馬旅程。
+      </p>
+    </div>
+
+    <!---------- related blog  ----------->
+    <div class="related-blogs-section">
+      <h1>Related UX Design Articles</h1>
+      <div class="related-blogs">
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Travel Guide" />
+          <a href="#">The Ultimate Kyrgyzstan Travel Guide</a>
+        </div>
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Nature Spots" />
+          <a href="#">10 Must-Visit Places in Kyrgyzstan for Nature Lovers</a>
+        </div>
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Local Tips" />
+          <a href="#">How to Experience Kyrgyzstan Like a Local</a>
+        </div>
+      </div>
+    </div>
 
     <section class="blog">
       <h1>相關文章</h1>
@@ -199,6 +267,7 @@
       </div>
     </section>
 
+    <script src="overnight-hotel.js"></script>
     <script>
       var navLinks = document.getElementById("navLinks");
 
