--- a/blog-article-3.html
+++ b/blog-article-3.html
@@ -8,12 +8,14 @@
       href="bek-ruby-logo/bek-ruby-title-logo-2.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>來吉爾吉斯要自助旅行還是跟團呢？ - Blog</title>
+    <title>在被稱為「中亞瑞士」的吉爾吉斯</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="about-us.css" />
     <link rel="stylesheet" href="visa.css" />
     <link rel="stylesheet" href="blog-article.css" />
     <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="blog-article-3.css" />
+    <link rel="stylesheet" href="overnights-blog.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
       rel="stylesheet"
@@ -31,7 +33,7 @@
     />
   </head>
   <body>
-    <section class="group-or-alone-sub-header">
+    <section class="murmur-sub-header">
       <nav>
         <a href="index.html"
           ><img src="bek-ruby-logo/white-bek-ruby.png" alt="Bek Ruby Logo"
@@ -55,67 +57,112 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>來吉爾吉斯要自助旅行還是跟團呢？</h1>
     </section>
 
     <!---------- blog ----------->
-
-    <section class="blog-article">
-      <div class="blog-row">
-        <div class="blog-col-info">
-          <div class="group-or-blog-info">
-            <div>
-              <h2></h2>
-              <p>
-                自助旅行30多個國家的嚕比， 會說如果我還年輕,滿腔熱血？
-                也有充足的旅遊時間去比手畫腳， 沒有太高預算，
-                有耐心講價按翻譯機,願意接受各種未知挑戰，
-                那我會說只要你願意～來吉爾吉斯當然可以自助旅行！
-              </p>
+    <div class="overnight-hotels">
+      <button class="prev-button">❮</button>
+      <div class="slider-wrapper">
+        <div class="overnight-slider">
+          <div class="slide slide-1">
+            <div class="slide-img slide-img-2">
+              <img src="images/blog/An-1.jpg" alt="Overnight Kemin" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
-
-            <div>
-              <h3>1 語言隔閡</h3>
-              <p>
-                主要語言是吉語和俄語，即使在首都講英文也不通，
-                比手畫腳很難解決旅行上的問題。
-              </p>
+          </div>
+          <div class="slide slide-2">
+            <div class="slide-img slide-img-2">
+              <img src="images/blog/An-2.jpg" alt="Overnight Arashan" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
-
-            <div>
-              <h3>2 路況不佳</h3>
-              <p>
-                只要往大山方向前進， 除了貫穿南北的路，
-                基本上都是石頭路，路程遙遠方向也很複雜， 建議請專業的司機,
-                旅行起來較安心。
-              </p>
+          </div>
+          <div class="slide slide-3">
+            <div class="slide-img slide-img-3">
+              <img src="images/blog/An-3.jpg" alt="Overnight Arashan" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
-
-            <div>
-              <h3>3 健行安全</h3>
-              <p>
-                溫差大且來到新的環境，
-                建議請嚮導可以盡興玩也能順便了解當地文化，
-              </p>
-            </div>
-
-            <div>
-              <h3>4 旅行資訊少， 資源不足</h3>
-              <p>
-                這點是我覺得自助旅行很困難的原因之一， 從甲地到乙地，
-                可能有數十種方式， 但每個當地人說法不同（比手畫腳），
-                常常溝通就需要花費很多時間， 建議和朋友組一個小團來玩。
-              </p>
+          </div>
+          <div class="slide slide-4">
+            <div class="slide-img slide-img-4">
+              <img src="images/blog/An-4.jpg" alt="Overnight Arashan" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+      <button class="next-button">❯</button>
+    </div>
+
+    <div class="blog-container">
+      <h1>
+        在被稱為「中亞瑞士」的吉爾吉斯， <br />體驗到人生最美好的一次騎行.
+      </h1>
+      <p>
+        我們在köl-suu lake 湖區住了一晚，準備明日騎馬去看湖。<br />
+        這個區域的海拔已經超過3000米，清晨5:30從首都比什凱克出發，開車開了12小時，直到傍晚才抵達這裡。<br />
+        接近山區，開始沒有柏油路面的時候，我感覺到了這趟旅行的調性了…另一個提醒我的，是我發現晚上山區的住宿沒有現代化廁所了，在草原中矗立的一個小木屋子，那是旱廁，也就是所謂的茅坑。<br />
+        在打開窗就看見雪山峰近在咫尺的地方，只有很簡單的遊牧民族組合屋，簡單的住宿，簡單的晚餐，這些我都可以理解，這是很接近大自然的旅行方式。<br />
+      </p>
+
+      <p>
+        一早起床，發現夜裡降下五月雪，我們要在紛飛的雪中，騎馬去köl-suu
+        湖，湖在雪線以上，還有整個冬季沒有融化的雪。這不到十公里的路段可以健行，但下雪的情況下，騎馬更好一些。<br />
+        馬可以輕鬆走過人類難跨越的濘泥與溪流。<br />
+      </p>
+
+      <p>
+        在海拔3000米的雪山山峰騎馬旅行是一種獨特且令人難忘的經歷。一路上，呼吸到清新的山間空氣，聽到馬蹄在泥土和岩石上發出的清脆聲音。<br />
+        白雪覆蓋的山峰在陽光下閃閃發光，仿佛置身於電影中才有的場景。這時候，騎馬不僅是一種交通方式，更是一種與自然親密接觸的體驗。<br />
+        高山的寧靜和清涼的空氣讓人感到無比放鬆和舒適，視野也更加開闊，可以俯瞰下方的溪谷，溪谷上的氂牛，和遠處的連綿覆雪的山頭。<br />
+      </p>
+
+      <p>
+        在這樣的高度上，天氣變幻莫測，一會兒陽光燦爛，一會兒又飄起了雪。<br />
+        我們騎著馬過溪，又踩上了陡坡，當馬兒走到平坦一些的雪地上，就興奮地想要跑。<br />
+        這可讓我緊張起來，畢竟之前墜馬兩次的經驗，馬只要跑快，我就有點緊張。<br />
+        少年一點也不怕，夾著馬腹，一直希望他的馬跑快點兒。<br />
+      </p>
+
+      <p>
+        這次的騎馬旅程，整整在雪山頭、氂牛邊騎行了3個小時，來回遊牧民族的住處到山中的堰塞湖，後來我也終於掌握了駕馬奔馳的一點技巧。<br />
+        騎完馬，喝上一杯熱茶或咖啡，感受那種深入骨髓的溫暖，是另一種無法言喻的享受。<br />
+        吉爾吉斯的騎馬行程，是我最美好的體驗。<br />
+      </p>
+    </div>
+
+    <!---------- related blog  ----------->
+    <div class="related-blogs-section">
+      <h1>Related UX Design Articles</h1>
+      <div class="related-blogs">
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Travel Guide" />
+          <a href="#">The Ultimate Kyrgyzstan Travel Guide</a>
+        </div>
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Nature Spots" />
+          <a href="#">10 Must-Visit Places in Kyrgyzstan for Nature Lovers</a>
+        </div>
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Local Tips" />
+          <a href="#">How to Experience Kyrgyzstan Like a Local</a>
+        </div>
+      </div>
+    </div>
 
     <section class="blog">
       <h1>相關文章</h1>
       <p>Related articles</p>
       <div class="related-row-blog">
+        <div class="blog-col">
+          <a href="blog-article-2.html">
+            <div class="top-blog-third">
+              <p class="about-blog-p">25 march 2023</p>
+              <img src="blog/ata-horse-child.jpg" alt="" />
+            </div>
+            <h3>來吉爾吉斯要自助旅行還是跟團呢？</h3>
+            <p></p>
+          </a>
+        </div>
         <div class="blog-col">
           <a href="blog-article.html">
             <div class="top-blog">
@@ -123,16 +170,6 @@
               <img src="blog/5 thins to do.jpg" alt="" />
             </div>
             <h3>來吉爾吉斯 一定要體驗的五件事</h3>
-            <p></p>
-          </a>
-        </div>
-        <div class="blog-col">
-          <a href="blog-article-1.html">
-            <div class="top-blog-second">
-              <p class="about-blog-p">12 april 2024</p>
-              <img src="blog/murmur.jpg" alt="" />
-            </div>
-            <h3>吸引力法則（嚕比）</h3>
             <p></p>
           </a>
         </div>
@@ -214,6 +251,7 @@
       </div>
     </section>
 
+    <script src="overnight-hotel.js"></script>
     <script>
       var navLinks = document.getElementById("navLinks");
 
