--- a/blog-article-5.html
+++ b/blog-article-5.html
@@ -8,12 +8,16 @@
       href="bek-ruby-logo/bek-ruby-title-logo-2.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>來吉爾吉斯要自助旅行還是跟團呢？ - Blog</title>
+    <title>
+      【吉爾吉斯探秘】親身體驗傳統鷹獵文化！ <br />驚險刺激又感動的狩獵之旅
+    </title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="about-us.css" />
     <link rel="stylesheet" href="visa.css" />
     <link rel="stylesheet" href="blog-article.css" />
     <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="blog-article-3.css" />
+    <link rel="stylesheet" href="overnights-blog.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
       rel="stylesheet"
@@ -31,7 +35,7 @@
     />
   </head>
   <body>
-    <section class="group-or-alone-sub-header">
+    <section class="murmur-sub-header">
       <nav>
         <a href="index.html"
           ><img src="bek-ruby-logo/white-bek-ruby.png" alt="Bek Ruby Logo"
@@ -55,67 +59,124 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>來吉爾吉斯要自助旅行還是跟團呢？</h1>
     </section>
 
     <!---------- blog ----------->
-
-    <section class="blog-article">
-      <div class="blog-row">
-        <div class="blog-col-info">
-          <div class="group-or-blog-info">
-            <div>
-              <h2></h2>
-              <p>
-                自助旅行30多個國家的嚕比， 會說如果我還年輕,滿腔熱血？
-                也有充足的旅遊時間去比手畫腳， 沒有太高預算，
-                有耐心講價按翻譯機,願意接受各種未知挑戰，
-                那我會說只要你願意～來吉爾吉斯當然可以自助旅行！
-              </p>
+    <div class="overnight-hotels">
+      <button class="prev-button">❮</button>
+      <div class="slider-wrapper">
+        <div class="overnight-slider">
+          <div class="slide slide-1">
+            <div class="slide-img slide-img-2">
+              <img src="images/blog/s-33.jpg" alt="Overnight Kemin" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
-
-            <div>
-              <h3>1 語言隔閡</h3>
-              <p>
-                主要語言是吉語和俄語，即使在首都講英文也不通，
-                比手畫腳很難解決旅行上的問題。
-              </p>
+          </div>
+          <div class="slide slide-2">
+            <div class="slide-img slide-img-2">
+              <img src="images/blog/s-22.jpg" alt="Overnight Arashan" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
-
-            <div>
-              <h3>2 路況不佳</h3>
-              <p>
-                只要往大山方向前進， 除了貫穿南北的路，
-                基本上都是石頭路，路程遙遠方向也很複雜， 建議請專業的司機,
-                旅行起來較安心。
-              </p>
-            </div>
-
-            <div>
-              <h3>3 健行安全</h3>
-              <p>
-                溫差大且來到新的環境，
-                建議請嚮導可以盡興玩也能順便了解當地文化，
-              </p>
-            </div>
-
-            <div>
-              <h3>4 旅行資訊少， 資源不足</h3>
-              <p>
-                這點是我覺得自助旅行很困難的原因之一， 從甲地到乙地，
-                可能有數十種方式， 但每個當地人說法不同（比手畫腳），
-                常常溝通就需要花費很多時間， 建議和朋友組一個小團來玩。
-              </p>
+          </div>
+          <div class="slide slide-3">
+            <div class="slide-img slide-img-3">
+              <img src="images/blog/s-11.jpg" alt="Overnight Arashan" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+      <button class="next-button">❯</button>
+    </div>
+
+    <div class="blog-container">
+      <h1>
+        【吉爾吉斯探秘】親身體驗傳統鷹獵文化！ <br />驚險刺激又感動的狩獵之旅
+      </h1>
+
+      <p>
+        吉爾吉斯人是遊牧民族，其中也有善獵者，在網上查資料時就有看到這裡有馴養獵鷹、
+        且與他們一同狩獵的「鷹獵人」，非常特色，但要找他們實在太難啦，沒想到這次在
+        Bek Ruby
+        貝殼和嚕比的吉爾吉斯行程，居然聯絡到了鷹獵人，本人直接開車來找我們！真是太榮幸啦！
+      </p>
+
+      <h4>與鷹獵人相遇</h4>
+      <p>
+        車子裡頭坐著超強卡司——獵鷹、兩頭獵犬、獵人的兒子，還有鷹獵人本人。
+        獵人是「鷹獵」的第二代傳人，帶來的是小兒子，正在和他學習，學成之後就會成為第三代傳人。
+      </p>
+
+      <h4>鷹獵人與獵鷹的默契</h4>
+      <p>
+        鷹獵人首先舉著鷹就出場了，穿著上頭繡著屬於獵鷹人花紋的套裝，背著弓箭，鷹就站在他戴著皮製厚手套的手上，氣勢很強。
+        鷹的頭上戴著一個形狀像分類帽的頭套，是為了不要讓鷹在狩獵前就東看西看，消耗力氣。
+      </p>
+      <p>
+        鷹獵人分享：「對待獵鷹，必須讓他理解你的權威，但同時也要讓他知道你對他的照顧與關心。」
+        「與鷹相處時，自己的情緒狀態也非常重要，若你總是用不好的情緒、態度與他相處，鷹也會用相同的態度對你。」
+      </p>
+
+      <h4>狩獵演示</h4>
+      <p>
+        最震撼的是鷹獵人展示的狩獵技術。他拿出一副用來模擬獵物的狐狸毛皮，
+        吹響口哨後，獵鷹飛向空中，迅速俯衝並精準地抓住了毛皮，展現了獵鷹的驚人速度與力量。
+        獵鷹捕獲獵物後，呆萌地盯著獵人，直到鷹獵人拿出肉塊獎勵它才肯放開獵物。
+      </p>
+
+      <h4>親身體驗</h4>
+      <p>
+        我們還穿上傳統服飾、戴上厚重的皮手套，親手讓鷹站在自己手上。鷹的重量和強大的氣勢讓人印象深刻，
+        當鷹張開翅膀的瞬間，感覺自己的嘴都合不攏了。
+      </p>
+
+      <h4>感動的羈絆</h4>
+      <p>
+        無論是鷹獵人與獵鷹長年累積的深厚感情、獵鷹和兒子培養的默契，
+        還是鷹獵人對於兒子訓練背後的冀望，都讓我們感受到他們之間強大的羈絆，
+        就像在漫畫裡一般，是發著光的。
+      </p>
+
+      <p>
+        我和唐宏安的吉爾吉斯行程是由
+        <strong>Bek Ruby 貝殼和嚕比</strong
+        >安排，吉爾吉斯旅行最佳解，找他們準沒錯！
+      </p>
+    </div>
+
+    <!---------- related blog  ----------->
+    <div class="related-blogs-section">
+      <h1>Related UX Design Articles</h1>
+      <div class="related-blogs">
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Travel Guide" />
+          <a href="#">The Ultimate Kyrgyzstan Travel Guide</a>
+        </div>
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Nature Spots" />
+          <a href="#">10 Must-Visit Places in Kyrgyzstan for Nature Lovers</a>
+        </div>
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Local Tips" />
+          <a href="#">How to Experience Kyrgyzstan Like a Local</a>
+        </div>
+      </div>
+    </div>
 
     <section class="blog">
       <h1>相關文章</h1>
       <p>Related articles</p>
       <div class="related-row-blog">
+        <div class="blog-col">
+          <a href="blog-article-2.html">
+            <div class="top-blog-third">
+              <p class="about-blog-p">25 march 2023</p>
+              <img src="blog/ata-horse-child.jpg" alt="" />
+            </div>
+            <h3>來吉爾吉斯要自助旅行還是跟團呢？</h3>
+            <p></p>
+          </a>
+        </div>
         <div class="blog-col">
           <a href="blog-article.html">
             <div class="top-blog">
@@ -123,16 +184,6 @@
               <img src="blog/5 thins to do.jpg" alt="" />
             </div>
             <h3>來吉爾吉斯 一定要體驗的五件事</h3>
-            <p></p>
-          </a>
-        </div>
-        <div class="blog-col">
-          <a href="blog-article-1.html">
-            <div class="top-blog-second">
-              <p class="about-blog-p">12 april 2024</p>
-              <img src="blog/murmur.jpg" alt="" />
-            </div>
-            <h3>吸引力法則（嚕比）</h3>
             <p></p>
           </a>
         </div>
@@ -214,6 +265,7 @@
       </div>
     </section>
 
+    <script src="overnight-hotel.js"></script>
     <script>
       var navLinks = document.getElementById("navLinks");
 
