--- a/blog-article-9.html
+++ b/blog-article-9.html
@@ -8,12 +8,15 @@
       href="bek-ruby-logo/bek-ruby-title-logo-2.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>來吉爾吉斯要自助旅行還是跟團呢？ - Blog</title>
+    <title>來吉爾吉斯要自助旅行 還是跟團呢？</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="about-us.css" />
     <link rel="stylesheet" href="visa.css" />
     <link rel="stylesheet" href="blog-article.css" />
     <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="blog-article-3.css" />
+    <link rel="stylesheet" href="overnights-blog.css" />
+    <link rel="stylesheet" href="blog-article-9.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
       rel="stylesheet"
@@ -31,7 +34,7 @@
     />
   </head>
   <body>
-    <section class="group-or-alone-sub-header">
+    <section class="murmur-sub-header">
       <nav>
         <a href="index.html"
           ><img src="bek-ruby-logo/white-bek-ruby.png" alt="Bek Ruby Logo"
@@ -55,67 +58,114 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>來吉爾吉斯要自助旅行還是跟團呢？</h1>
     </section>
 
     <!---------- blog ----------->
-
-    <section class="blog-article">
-      <div class="blog-row">
-        <div class="blog-col-info">
-          <div class="group-or-blog-info">
-            <div>
-              <h2></h2>
-              <p>
-                自助旅行30多個國家的嚕比， 會說如果我還年輕,滿腔熱血？
-                也有充足的旅遊時間去比手畫腳， 沒有太高預算，
-                有耐心講價按翻譯機,願意接受各種未知挑戰，
-                那我會說只要你願意～來吉爾吉斯當然可以自助旅行！
-              </p>
+    <div class="overnight-hotels">
+      <button class="prev-button">❮</button>
+      <div class="slider-wrapper">
+        <div class="overnight-slider">
+          <div class="slide slide-1">
+            <div class="slide-img slide-img-2">
+              <img src="blog/769A1454.jpg" alt="Overnight Kemin" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
+          </div>
 
-            <div>
-              <h3>1 語言隔閡</h3>
-              <p>
-                主要語言是吉語和俄語，即使在首都講英文也不通，
-                比手畫腳很難解決旅行上的問題。
-              </p>
-            </div>
-
-            <div>
-              <h3>2 路況不佳</h3>
-              <p>
-                只要往大山方向前進， 除了貫穿南北的路，
-                基本上都是石頭路，路程遙遠方向也很複雜， 建議請專業的司機,
-                旅行起來較安心。
-              </p>
-            </div>
-
-            <div>
-              <h3>3 健行安全</h3>
-              <p>
-                溫差大且來到新的環境，
-                建議請嚮導可以盡興玩也能順便了解當地文化，
-              </p>
-            </div>
-
-            <div>
-              <h3>4 旅行資訊少， 資源不足</h3>
-              <p>
-                這點是我覺得自助旅行很困難的原因之一， 從甲地到乙地，
-                可能有數十種方式， 但每個當地人說法不同（比手畫腳），
-                常常溝通就需要花費很多時間， 建議和朋友組一個小團來玩。
-              </p>
+          <div class="slide slide-1">
+            <div class="slide-img slide-img-2">
+              <img src="blog/son-kol.jpg" alt="Overnight Kemin" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+      <button class="next-button">❯</button>
+    </div>
+
+    <div class="blog-container">
+      <h1>
+        來到吉爾吉斯，這兩個湖絕對是不能錯過的！但到底該選 伊塞克湖 還是 頌湖
+        呢？來，讓我用最簡單的方式幫你分析一下！
+      </h1>
+      <h2>🌊 伊塞克湖：全年開放的高山海灘度假勝地</h2>
+      <div class="lake issyk">
+        <p>
+          <span class="check">✔</span> <strong>地點：</strong> 東部，海拔 1,607
+          公尺，世界第二大高山湖！
+        </p>
+        <p>
+          <span class="check">✔</span>
+          <strong>特色：</strong>
+          超大的咸水湖，冬天不結冰，適合一年四季旅遊。夏天可游泳，沿岸有溫泉、沙灘、度假村，還有水上活動！
+        </p>
+        <p>
+          <span class="check">✔</span>
+          <strong>適合誰？</strong>
+          喜歡輕鬆旅行、兼顧風景和娛樂的人。開車從比什凱克過來約 4-5 小時。
+        </p>
+      </div>
+
+      <h2>⛰ 頌湖：想體驗真正的遊牧生活？來這裡！</h2>
+      <div class="lake song">
+        <p>
+          <span class="check">✔</span>
+          <strong>地點：</strong> 中部天山山脈，海拔 3,016 公尺，超高！
+        </p>
+        <p>
+          <span class="check">✔</span>
+          <strong>特色：</strong> 純天然高山湖泊，冬季結冰，僅夏季 (6-9 月)
+          可訪。適合體驗遊牧文化、騎馬、看牛羊滿地跑！
+        </p>
+        <p>
+          <span class="check">✔</span>
+          <strong>適合誰？</strong>
+          喜歡大自然、能接受挑戰、想沉浸式體驗遊牧生活的人。交通較困難，需要越野車或騎馬，從比什凱克來約
+          6-8 小時。
+        </p>
+      </div>
+
+      <h2>🎯 所以，該選哪個？</h2>
+      <p class="compare">👉 想要輕鬆度假 + 一點探險 = 伊塞克湖 🌴</p>
+      <p class="compare">👉 想要沈浸式自然 + 遊牧文化 = 頌湖 🐎</p>
+      <p>
+        當然，如果時間允許，兩個都去最好！伊塞克湖讓你舒服放鬆，頌湖給你真正的荒野體驗，這樣就能一次感受吉爾吉斯的兩種風格！
+      </p>
+    </div>
+
+    <!---------- related blog  ----------->
+    <div class="related-blogs-section">
+      <h1>Related UX Design Articles</h1>
+      <div class="related-blogs">
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Travel Guide" />
+          <a href="#">The Ultimate Kyrgyzstan Travel Guide</a>
+        </div>
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Nature Spots" />
+          <a href="#">10 Must-Visit Places in Kyrgyzstan for Nature Lovers</a>
+        </div>
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Local Tips" />
+          <a href="#">How to Experience Kyrgyzstan Like a Local</a>
+        </div>
+      </div>
+    </div>
 
     <section class="blog">
       <h1>相關文章</h1>
       <p>Related articles</p>
       <div class="related-row-blog">
+        <div class="blog-col">
+          <a href="blog-article-2.html">
+            <div class="top-blog-third">
+              <p class="about-blog-p">25 march 2023</p>
+              <img src="blog/ata-horse-child.jpg" alt="" />
+            </div>
+            <h3>來吉爾吉斯要自助旅行還是跟團呢？</h3>
+            <p></p>
+          </a>
+        </div>
         <div class="blog-col">
           <a href="blog-article.html">
             <div class="top-blog">
@@ -123,16 +173,6 @@
               <img src="blog/5 thins to do.jpg" alt="" />
             </div>
             <h3>來吉爾吉斯 一定要體驗的五件事</h3>
-            <p></p>
-          </a>
-        </div>
-        <div class="blog-col">
-          <a href="blog-article-1.html">
-            <div class="top-blog-second">
-              <p class="about-blog-p">12 april 2024</p>
-              <img src="blog/murmur.jpg" alt="" />
-            </div>
-            <h3>吸引力法則（嚕比）</h3>
             <p></p>
           </a>
         </div>
@@ -214,6 +254,7 @@
       </div>
     </section>
 
+    <script src="overnight-hotel.js"></script>
     <script>
       var navLinks = document.getElementById("navLinks");
 
