--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,8 @@
     <title>最新文章 - Blog</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="guest.review.css" />
+    <link rel="stylesheet" href="blog-page.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
       rel="stylesheet"
@@ -52,8 +54,157 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>最新文章</h1>
     </section>
+
+    <!---------- Guests blog  ----------->
+    <div class="blog-page-container">
+      <h1>最新文章</h1>
+
+      <div class="blog-grid">
+        <!--article-->
+
+        <div class="blog-item">
+          <a href="blog-article-9.html">
+            <div>
+              <img src="blog/is-or-sk.png" alt="Adventure in Kyrgyzstan" />
+              <div class="blog-content">
+                <h4>Ruby</h4>
+                <p>March 28 2025</p>
+                <h3>伊塞克湖 vs. 頌湖： <br />到底該去哪裡玩？</h3>
+                <a href="blog copy 1.html">Read More</a>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="blog-item">
+          <a href="blog-article-8.html">
+            <div>
+              <img
+                src="guest-img/ata-horse.png"
+                alt="Adventure in Kyrgyzstan"
+              />
+              <div class="blog-content">
+                <h4>Ruby</h4>
+                <p>25 March 2022</p>
+                <h3>來吉爾吉斯，該自助旅行還是跟團？</h3>
+                <a href="blog copy 1.html">Read More</a>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="blog-item">
+          <a href="blog-article-10.html">
+            <div>
+              <img src="blog/MvsK.jpg" alt="Adventure in Kyrgyzstan" />
+              <div class="blog-content">
+                <h4>Ruby</h4>
+                <p>15 January 2025</p>
+                <h3>蒙古阿爾泰 vs. 吉爾吉斯：高山草原探險全方位比較！</h3>
+                <a href="blog-article-10.html">Read More</a>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="blog-item">
+          <a href="blog-article-7.html">
+            <div>
+              <img src="guest-img/murmur.png" alt="Adventure in Kyrgyzstan" />
+              <div class="blog-content">
+                <h4>Ruby</h4>
+                <p>12 April 2022</p>
+                <h3>從辦公室到天山：我與 Little OH! 的自由人生旅程</h3>
+                <a href="blog copy 1.html">Read More</a>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="blog-item">
+          <a href="blog-article-6.html">
+            <div>
+              <img
+                src="guest-img/5 thins to do.jpg"
+                alt="Adventure in Kyrgyzstan"
+              />
+              <div class="blog-content">
+                <h4>Ruby</h4>
+                <p>28 June 2022</p>
+                <h3>來吉爾吉斯 一定要體驗的五件事。</h3>
+                <a href="blog copy 1.html">Read More</a>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="blog-item">
+          <a href="blog-article-3.html">
+            <div>
+              <img
+                src="guest-img/user-post-1.jpg"
+                alt="Adventure in Kyrgyzstan"
+              />
+              <div class="blog-content">
+                <h4>唐宏安 (旅遊作家)</h4>
+                <p>14 June 2024</p>
+                <h3>
+                  在被稱為「中亞瑞士」的吉爾吉斯， 體驗到人生最美好的一次騎行。
+                </h3>
+                <a href="blog copy 1.html">Read More</a>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="blog-item">
+          <a href="blog-article-4.html">
+            <div>
+              <img
+                src="guest-img/user-post-yurt.jpg"
+                alt="Adventure in Kyrgyzstan"
+              />
+              <div class="blog-content">
+                <h4>地球少年</h4>
+                <p>14 July 2024</p>
+                <h3>吉爾吉斯的草原遊牧民族，也住「蒙古包」？</h3>
+                <a href="blog copy 1.html">Read More</a>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="blog-item">
+          <a href="blog-article-5.html">
+            <div>
+              <img
+                src="guest-img/user-post-4.jpg"
+                alt="Adventure in Kyrgyzstan"
+              />
+              <div class="blog-content">
+                <h4>地球少年</h4>
+                <p>9 July 2024</p>
+                <h3>吉爾吉斯鷹獵人文化探索之旅</h3>
+                <a href="blog copy 1.html">Read More</a>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="blog-item">
+          <a href="blog-article-11.html">
+            <div>
+              <img src="blog/Outhmn.jpg" alt="Adventure in Kyrgyzstan" />
+              <div class="blog-content">
+                <h4>刊登於《La Listo》創刊號</h4>
+                <p>12 November 2022</p>
+                <h3>馬背上的秋色探險——騎行吉爾吉斯高山森林</h3>
+                <a href="blog copy 1.html">Read More</a>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
 
     <!---------- Tour ----------->
 
@@ -99,19 +250,34 @@
 
     <section class="footer">
       <div class="footer-container">
-        <div class="footer-logo">
-          <a href="index.html"
-            ><img
-              loading="lazy"
-              class="logo"
-              src="bek-ruby-logo/bek-ruby-orange-green-2.svg"
-              alt="Bek Ruby Logo"
-          /></a>
+        <div class="footer-logo-address">
+          <div class="footer-logo">
+            <a href="index.html"
+              ><img
+                loading="lazy"
+                class="logo"
+                src="bek-ruby-logo/bek-ruby-orange-green-2.svg"
+                alt="Bek Ruby Logo"
+            /></a>
 
-          <p class="footer-copyright">
-            Copyright © Bek & Ruby 2023 <br />
-            All Rights Reserved.
-          </p>
+            <p class="footer-copyright">
+              Copyright © Bek & Ruby 2023 <br />
+              All Rights Reserved.
+            </p>
+          </div>
+          <div class="company-info">
+            <ul>
+              <li>吉爾吉斯旅行社</li>
+              <li>
+                registration number <br />
+                02405202310152,
+              </li>
+              <li>
+                code OKPO 31953194 <br />
+                Kyrgyzstan, Naryn
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="footer-nav-links">
@@ -126,20 +292,6 @@
             <li><a href="question-answers.html">Q&amp;A</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="">7 days trip</a></li>
-          </ul>
-        </div>
-
-        <div class="company-info">
-          <ul>
-            <li>吉爾吉斯旅行社</li>
-            <li>
-              registration number <br />
-              02405202310152,
-            </li>
-            <li>
-              code OKPO 31953194 <br />
-              Kyrgyzstan, Naryn
-            </li>
           </ul>
         </div>
 
@@ -169,6 +321,12 @@
       </div>
     </section>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.2/lightgallery.min.js"></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"
+    ></script>
+    <script src="testimonial.js"></script>
     <script>
       var navLinks = document.getElementById("navLinks");
 
