--- a/blog-article-4.html
+++ b/blog-article-4.html
@@ -8,12 +8,14 @@
       href="bek-ruby-logo/bek-ruby-title-logo-2.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>來吉爾吉斯要自助旅行還是跟團呢？ - Blog</title>
+    <title>吉爾吉斯的草原遊牧民族，也住「蒙古包」？</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="about-us.css" />
     <link rel="stylesheet" href="visa.css" />
     <link rel="stylesheet" href="blog-article.css" />
     <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="blog-article-3.css" />
+    <link rel="stylesheet" href="overnights-blog.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
       rel="stylesheet"
@@ -31,7 +33,7 @@
     />
   </head>
   <body>
-    <section class="group-or-alone-sub-header">
+    <section class="murmur-sub-header">
       <nav>
         <a href="index.html"
           ><img src="bek-ruby-logo/white-bek-ruby.png" alt="Bek Ruby Logo"
@@ -55,67 +57,109 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>來吉爾吉斯要自助旅行還是跟團呢？</h1>
     </section>
 
     <!---------- blog ----------->
-
-    <section class="blog-article">
-      <div class="blog-row">
-        <div class="blog-col-info">
-          <div class="group-or-blog-info">
-            <div>
-              <h2></h2>
-              <p>
-                自助旅行30多個國家的嚕比， 會說如果我還年輕,滿腔熱血？
-                也有充足的旅遊時間去比手畫腳， 沒有太高預算，
-                有耐心講價按翻譯機,願意接受各種未知挑戰，
-                那我會說只要你願意～來吉爾吉斯當然可以自助旅行！
-              </p>
+    <div class="overnight-hotels">
+      <button class="prev-button">❮</button>
+      <div class="slider-wrapper">
+        <div class="overnight-slider">
+          <div class="slide slide-1">
+            <div class="slide-img slide-img-2">
+              <img src="images/blog/S-2.jpg" alt="Overnight Kemin" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
-
-            <div>
-              <h3>1 語言隔閡</h3>
-              <p>
-                主要語言是吉語和俄語，即使在首都講英文也不通，
-                比手畫腳很難解決旅行上的問題。
-              </p>
+          </div>
+          <div class="slide slide-2">
+            <div class="slide-img slide-img-2">
+              <img src="images/blog/S-1.jpg" alt="Overnight Arashan" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
-
-            <div>
-              <h3>2 路況不佳</h3>
-              <p>
-                只要往大山方向前進， 除了貫穿南北的路，
-                基本上都是石頭路，路程遙遠方向也很複雜， 建議請專業的司機,
-                旅行起來較安心。
-              </p>
+          </div>
+          <div class="slide slide-3">
+            <div class="slide-img slide-img-3">
+              <img src="images/blog/S-3.jpg" alt="Overnight Arashan" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
-
-            <div>
-              <h3>3 健行安全</h3>
-              <p>
-                溫差大且來到新的環境，
-                建議請嚮導可以盡興玩也能順便了解當地文化，
-              </p>
-            </div>
-
-            <div>
-              <h3>4 旅行資訊少， 資源不足</h3>
-              <p>
-                這點是我覺得自助旅行很困難的原因之一， 從甲地到乙地，
-                可能有數十種方式， 但每個當地人說法不同（比手畫腳），
-                常常溝通就需要花費很多時間， 建議和朋友組一個小團來玩。
-              </p>
+          </div>
+          <div class="slide slide-4">
+            <div class="slide-img slide-img-4">
+              <img src="images/blog/S-4.jpg" alt="Overnight Arashan" />
+              <div class="text-overlay text-overlay-2"></div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+      <button class="next-button">❯</button>
+    </div>
+
+    <div class="blog-container">
+      <h1>吉爾吉斯的草原遊牧民族，也住「蒙古包」？</h1>
+      <p>
+        先來替蒙古包正名。事實上，蒙古包並不是蒙古族專屬，「蒙古」包這個詞讓我們無意間將他的定義狹隘了。遊牧民族使用的可拆、可攜帶，以動物皮革（以前）製成的圓頂帳篷稱為
+        「Yurt」，在吉爾吉斯、哈薩克等等國家的遊牧民族傳統帳篷都是這個形式。所以，來到吉爾吉斯當然要體驗入住這樣的營區。
+      </p>
+
+      <p>
+        我們在吉爾吉斯的朋友Navat
+        的家族就是遊牧民族，今晚，我們來到她父母打理的Yurt（蒙古包）營區。兩座大石山壁的中間，正好有一片平坦草坪，得天獨厚的一塊美地，還有什麼地方比這裡更適合建營區？Navat
+        說，在上個世紀，這裡是蘇聯軍訓露營的場地。
+      </p>
+
+      <p>
+        我們住的那一頂蒙古包，是Navat
+        奶奶（祖傳？）的帳篷，從上個世紀保存到今日的傳統蒙古包，極其珍貴，簡直能進博物館。
+      </p>
+
+      <p>
+        木結構非常巧妙，一早將屋頂的天窗拉開，陽光就照進了圓形的室內空間，這是遊牧民族一天的正確打開方式吧！
+      </p>
+
+      <p>
+        晚餐是很正宗遊牧民族的作法，在另一頂廚房蒙古包內，火爐上煮著大鍋羊肉湯。吃飽喝足，圍繞著營火，有人說著鬼故事（不分國界），有人拿出烏克麗麗彈唱。
+      </p>
+      <p>
+        早餐更是豐盛美妙，山裡的野果製作的果醬，山裡花草泡的花草茶。這是最貼近自然的生活方式，在吉爾吉斯。
+      </p>
+      <p>
+        我和唐宏安的吉爾吉斯行程是由Bek Ruby
+        貝殼和嚕比安排，吉爾吉斯旅行最佳解，找他們就對了！
+      </p>
+    </div>
+
+    <!---------- related blog  ----------->
+    <div class="related-blogs-section">
+      <h1>Related UX Design Articles</h1>
+      <div class="related-blogs">
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Travel Guide" />
+          <a href="#">The Ultimate Kyrgyzstan Travel Guide</a>
+        </div>
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Nature Spots" />
+          <a href="#">10 Must-Visit Places in Kyrgyzstan for Nature Lovers</a>
+        </div>
+        <div class="related-blog-item">
+          <img src="8-days-image/altun-arashan.png" alt="Local Tips" />
+          <a href="#">How to Experience Kyrgyzstan Like a Local</a>
+        </div>
+      </div>
+    </div>
 
     <section class="blog">
       <h1>相關文章</h1>
       <p>Related articles</p>
       <div class="related-row-blog">
+        <div class="blog-col">
+          <a href="blog-article-2.html">
+            <div class="top-blog-third">
+              <p class="about-blog-p">25 march 2023</p>
+              <img src="blog/ata-horse-child.jpg" alt="" />
+            </div>
+            <h3>來吉爾吉斯要自助旅行還是跟團呢？</h3>
+            <p></p>
+          </a>
+        </div>
         <div class="blog-col">
           <a href="blog-article.html">
             <div class="top-blog">
@@ -123,16 +167,6 @@
               <img src="blog/5 thins to do.jpg" alt="" />
             </div>
             <h3>來吉爾吉斯 一定要體驗的五件事</h3>
-            <p></p>
-          </a>
-        </div>
-        <div class="blog-col">
-          <a href="blog-article-1.html">
-            <div class="top-blog-second">
-              <p class="about-blog-p">12 april 2024</p>
-              <img src="blog/murmur.jpg" alt="" />
-            </div>
-            <h3>吸引力法則（嚕比）</h3>
             <p></p>
           </a>
         </div>
@@ -214,6 +248,7 @@
       </div>
     </section>
 
+    <script src="overnight-hotel.js"></script>
     <script>
       var navLinks = document.getElementById("navLinks");
 
