--- a/contact.html
+++ b/contact.html
@@ -73,10 +73,10 @@
       <div class="contact-container">
         <div class="contact-left">
           <div class="contact-left-title">
-            <h2>Let's get in touch</h2>
+            <h2>Let's get in touch!</h2>
             <p>
               Get in touch with us! We're here to help—send us a message via our
-              Contact Us page.
+              Contact us page.
             </p>
           </div>
           <div class="email-address">
@@ -112,7 +112,7 @@
           class="contact-right"
         >
           <div class="contact-right-title">
-            <h2>Contuct us</h2>
+            <h2>Contact us</h2>
             <hr />
           </div>
           <input
@@ -130,7 +130,7 @@
           <input
             type="email"
             name="email"
-            placeholder="Your Emil"
+            placeholder="Your Email"
             class="contact-inputs"
             required
           />
