why choose us change
why choose us change

--- a/index.html
+++ b/index.html
@@ -1027,48 +1027,19 @@
 
     <!---------- Why Choose Us  ----------->
     <section class="why-us">
-      <h1>為什麼選擇我們</h1>
-      <div class="row">
-        <div class="why-col">
-          <div class="why-col-img">
-            <img
-              loading="lazy"
-              src="assets/Authentic Adventures 4x.png"
-              alt=""
-            />
-          </div>
-
-          <h3>Authentic Adventures</h3>
-          <p>沉浸在吉爾吉斯獨特的遊牧文化中 蒙古包住宿和獵鷹表演等體驗。</p>
-        </div>
-        <div class="why-col">
-          <div class="why-col-img">
-            <img
-              loading="lazy"
-              src="assets/Professional Guides 4x.png"
-              alt=""
-            />
-          </div>
-
-          <h3>Professional Guides</h3>
+      <div class="why-us-container">
+        <div class="left"></div>
+        <div class="right">
+          <h2>Why Choose Us</h2>
           <p>
-            在經驗豐富的當地人士的指導下充滿信心地探索
-            了解景觀及其隱藏寶石的專家。
+            我喜歡看的ＹＴ頻道類別中有旅遊類，印象中應是演算法推了妳們的頻道給我，起初沒有認真看，今年初要去一趟清邁，查資料又查到貝殼嚕比，慢慢覺得頻道蠻有意思，真切、節奏舒服，很訝異訂閱數不高。
           </p>
-        </div>
-        <div class="why-col">
-          <div class="why-col-img">
-            <img
-              loading="lazy"
-              src="assets/Unforgettable Memories 4x.png"
-              alt=""
-            />
-          </div>
-
-          <h3>Unforgettable Memories</h3>
           <p>
-            當您發現未馴服的美麗時，與我們一起創造持久的回憶
-            以及吉爾吉斯豐富的文化。
+            因為喜歡大自然、有點怕人擠人，喜歡去沒去過的地方，對熱門景點無偏好（看人家拍的可能還比較好看呵呵），不過，選擇吉爾吉斯是因為貝殼嚕比喔，因為美景很多地方有，但是對的夥伴需要一點運氣。（我知道帶團的不是妳們夫妻，無妨，我也會相信妳們的夥伴）
+          </p>
+          <p>
+            加總已經到了體力下降時間緊縮的階段，所以想嘗試跟團（我是初次，有點緊張），可以偷懶少做功課
+            >
           </p>
         </div>
       </div>
