small update why us
small update why us

--- a/index.html
+++ b/index.html
@@ -1031,6 +1031,14 @@
         <div class="left"></div>
         <div class="right">
           <h2>Why Choose Us</h2>
+
+          <h4>寧凡：</h4>
+          <p class="first-why-us-message">
+            覺得超幸運遇到各位貼心旅伴、以及世界最棒的領隊 Altynai
+            讓我們有很美好的回憶，
+            即將開啟日復一日地工作模式，提醒自己保持樂觀自然，如同吉爾吉斯教我的。
+          </p>
+
           <p>
             我喜歡看的ＹＴ頻道類別中有旅遊類，印象中應是演算法推了妳們的頻道給我，起初沒有認真看，今年初要去一趟清邁，查資料又查到貝殼嚕比，慢慢覺得頻道蠻有意思，真切、節奏舒服，很訝異訂閱數不高。
           </p>
